# mcp-standby-proxy

./: .editorconfig  .gitignore  .gitlint  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  TODO.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.githooks/: commit-msg
.github/workflows/: ci.yml
docs/adr/: ADR-001-devcontainer-isolation.md
docs/plans/: config-spec.md  prd.md  tech-spec.md  tech-stack.md
examples/: claude-context.yaml  firecrawl.yaml  kroki.yaml
src/mcp_standby_proxy/: cache.py  cli.py  config.py  errors.py  healthcheck.py  jsonrpc.py  lifecycle.py  proxy.py  router.py  state.py
src/mcp_standby_proxy/transport/: __init__.py  base.py  sse.py  stdio.py  streamable_http.py
tests/: conftest.py  test_cache.py  test_cli.py  test_config.py  test_errors.py  test_healthcheck.py  test_jsonrpc.py  test_lifecycle.py  test_proxy_logging.py  test_router.py  test_router_recovery.py  test_shutdown.py  test_state.py  test_transport_base.py  test_transport_sse.py  test_transport_stdio.py  test_transport_streamable_http.py
tests/integration/: conftest.py  test_full_flow.py
tests/smoke/: conftest.py  test_recovery_smoke.py  test_stdout_cleanliness_smoke.py  test_streamable_http_smoke.py
