[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-standby-proxy"
version = "0.1.0"
description = "Lazy-start stdio proxy for MCP servers"
requires-python = ">=3.12"
dependencies = [
  "mcp",
  "httpx",
  "pydantic>=2",
  "click>=8",
  "pyyaml",
]

[project.scripts]
mcp-standby-proxy = "mcp_standby_proxy.cli:main"

[dependency-groups]
dev = [
  "pytest",
  "pytest-asyncio",
  "ruff",
  "mypy",
  "uvicorn",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_standby_proxy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-m 'not smoke'"
markers = [
  "smoke: tests requiring a real MCP server (not run by default)",
]

[tool.ruff]
line-length = 99
target-version = "py312"

[tool.mypy]
strict = true
